# Stream-Processing-Test

./: .gitignore  README.md  start.txt
StreamProcessing/StreamTest/: CMakeLists.txt  Dockerfile  HttpServer.cpp  HttpServer.h  Logger.h  StreamTest.cpp  StreamTest.h  build.sh  main.cpp
